syntax = "proto3";

package aihr.chat;

option java_package = "de.tum.devops.grpc.chat";
option java_outer_classname = "ChatServiceProto";

import "google/protobuf/timestamp.proto";

// Chat Service Definition
service ChatService {
  // Send conversation history to AI and get response
  rpc GetAIResponse(ChatRequest) returns (ChatResponse);
}

// Request Message
message ChatRequest {
  string application_id = 1;
  repeated ChatMessage conversation_history = 2;
}

// Response Message  
message ChatResponse {
  bool success = 1;
  string error_message = 2;
  string ai_response = 3;
}

// Supporting Data Models
message ChatMessage {
  MessageSender sender = 1;
  string content = 2;
  google.protobuf.Timestamp timestamp = 3;
}

enum MessageSender {
  MESSAGE_SENDER_UNSPECIFIED = 0;
  MESSAGE_SENDER_AI = 1;
  MESSAGE_SENDER_CANDIDATE = 2;
} 